--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,10 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.6.0",
+    "express": "^5.1.0",
+    "razorpay": "^2.9.6"
   }
 }
