feat(HistoryPage):add pdf generation soon after payment. add localstorage to save booking data

--- a/package.json
+++ b/package.json
@@ -56,5 +56,17 @@
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "description": "This is an [Expo](https://expo.dev) project created with [`create-expo-app`](https://www.npmjs.com/package/create-expo-app).",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Muragesh-24/VH-Mess-Application.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Muragesh-24/VH-Mess-Application/issues"
+  },
+  "homepage": "https://github.com/Muragesh-24/VH-Mess-Application#readme"
 }
